Fix footer nav spacing for mobile

--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -189,7 +189,7 @@
   .footer-nav {
     font-size: 14px;
     li {
-      margin-right: 8px;
+      margin-right: 6px;
       &:last-child {
         margin-right: 0;
       }
